# prompt_transpiler

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  SmallTalk.txt  benchmark_store.py  entrypoint.sh  example.secrets.toml  examples.json  gemini.md  patch.diff  pyproject.toml  settings.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml
.jules/: bolt.md  inspector.md  scribe.md  sentinel.md
docs/: changelog.md  conf.py  contributing.md  index.rst  modules.rst  prompt_compiler.dto.rst  prompt_compiler.llm.prompts.rst  prompt_compiler.llm.rst  prompt_compiler.rst  prompt_compiler.utils.rst  prompt_transpiler.dto.rst  prompt_transpiler.llm.prompts.rst  prompt_transpiler.llm.rst  prompt_transpiler.rst  prompt_transpiler.utils.rst
docs/superpowers/specs/: 2026-04-19-unified-payload-design.md
src/prompt_compiler/: __init__.py  cli.py  config.py  core_logic.py
src/prompt_compiler/api/: __init__.py  app.py  errors.py  routes.py  schemas.py
src/prompt_compiler/core/: interfaces.py  pipeline.py  registry.py  scoring.py
src/prompt_compiler/core/roles/: architect.py  base.py  decompiler.py  diff.py  historian.py  pilot.py
src/prompt_compiler/dto/: __init__.py  models.py
src/prompt_compiler/jobs/: __init__.py  models.py  service.py  store.py  util.py  worker.py
src/prompt_compiler/llm/: anthropic.py  base.py  factory.py  gemini.py  huggingface.py  openai.py
src/prompt_compiler/llm/prompts/: __init__.py  prompt_objects.py
src/prompt_compiler/utils/: logging.py  telemetry.py  token_collector.py
src/prompt_complier/: __init__.py  cli.py  config.py  core_logic.py
src/prompt_complier/core/: exceptions.py  interfaces.py  pipeline.py  scoring.py
src/prompt_complier/core/roles/: architect.py  decompiler.py  historian.py  pilot.py
src/prompt_complier/dto/: __init__.py  models.py
src/prompt_complier/llm/: anthropic.py  base.py  factory.py  gemini.py  huggingface.py  openai.py
src/prompt_complier/llm/prompts/: __init__.py  prompt_objects.py  pronpt_objects.py
src/prompt_complier/utils/: logging.py  telemetry.py
src/prompt_transpiler/: __init__.py  cli.py  config.py  core_logic.py  reporting.py
src/prompt_transpiler/api/: __init__.py  app.py  errors.py  routes.py  schemas.py
src/prompt_transpiler/core/: exceptions.py  interfaces.py  models.json  pipeline.py  registry.py  scoring.py
src/prompt_transpiler/dto/: models.py
src/prompt_transpiler/jobs/: __init__.py  models.py  service.py  store.py  util.py  worker.py
src/prompt_transpiler/llm/: __init__.py  anthropic.py  base.py  factory.py  gemini.py  huggingface.py  openai.py
src/prompt_transpiler/utils/: logging.py  telemetry.py  token_collector.py
tests/: conftest.py
tests/prompt_compiler/: test_cli.py  test_config.py  test_core_logic.py
tests/prompt_compiler/api/: test_api.py
tests/prompt_compiler/core/: test_pipeline.py  test_registry.py  test_scoring.py
tests/prompt_compiler/dto/: test_dto_models.py
tests/prompt_compiler/jobs/: test_service.py  test_service_cancel.py  test_store.py  test_worker.py
tests/prompt_compiler/llm/: test_anthropic.py  test_base.py  test_factory.py  test_gemini.py  test_huggingface.py  test_openai.py
tests/prompt_compiler/utils/: test_telemetry.py  test_token_collector.py
tests/prompt_transpiler/: test_cli.py  test_cli_json.py  test_config.py  test_core_logic.py  test_reporting.py
tests/prompt_transpiler/api/: test_api.py
tests/prompt_transpiler/core/: test_pipeline.py  test_registry.py  test_scoring.py  test_scoring_edge_cases.py
tests/prompt_transpiler/dto/: test_dto_models.py
tests/prompt_transpiler/jobs/: test_service.py  test_service_cancel.py  test_service_edge.py  test_service_edge_cases.py  test_service_error_handling.py  test_store.py  test_store_edge.py  test_util.py  test_worker.py
tests/prompt_transpiler/llm/: test_anthropic.py  test_base.py  test_factory.py  test_gemini.py  test_huggingface.py  test_openai.py
tests/prompt_transpiler/utils/: test_logging.py  test_telemetry.py  test_token_collector.py
(+22 files in other folders)
