[project]
name = "prompt-complier"
version = "0.1.0"
description = ""
authors = [{ name = "Jacob Bourne", email = "jacob.bourne@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
attrs = "^25.4.0"
dynaconf = "^3.2.12"
marshmallow = "^4.1.0"
marshmallow-enum = "^1.5.1"
marshmallow_dataclass = "*"
structlog = "^25.5.0"
opentelemetry-api = "^1.39.0"
opentelemetry-sdk = "^1.39.0"
opentelemetry-exporter-otlp = "^1.39.0"
openai = "^2.9.0"
google-genai = "^1.53.0"
anthropic = "^0.75.0"
huggingface-hub = "^1.2.1"
click = "^8.3.1"

[tool.poetry.scripts]
prompt-compiler = "prompt_complier.cli:main"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
pytest-xdist = "^3.8.0"
tox = "^4.32.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.5"
pre-commit = "^4.4.0"
mypy = "^1.18.2"

[tool.poetry]
packages = [{ include = "prompt_complier", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests"]
mypy_path = "src"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

[tool.pytest.ini_options]
addopts = "--cov=prompt_complier --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
omit = ["src/prompt_complier/cli.py"]
