[project]
name = "prompt-complier"
version = "0.1.0"
description = ""
authors = [{ name = "Jacob Bourne", email = "jacob.bourne@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "attrs>=26.0.0",
    "dynaconf>=3.2.0",
    "marshmallow>=4.1.0",
    "marshmallow-enum>=1.5.1",
    "marshmallow_dataclass>=8.7.0",
    "structlog>=25.5.0,<26.0.0",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "opentelemetry-exporter-otlp>=1.41.0",
    "openai>=2.3.0",
    "google-genai>=1.73.0",
    "anthropic>=0.96.0",
    "huggingface-hub>=1.1.0",
    "click>=8.3.2",
    "apiflask>=3.1.0",
    "flask>=3.1.0",
    "gunicorn>=25.0.0",
    "opentelemetry-instrumentation-flask>=0.62b0",
    "opentelemetry-instrumentation-google-genai>=0.7b0",
    "opentelemetry-instrumentation-openai>=0.60.0",
    "opentelemetry-instrumentation-anthropic>=0.60.0",
    "traceAI-smolagents>=0.1.5",
]

[project.scripts]
prompt-compiler = "prompt_compiler.cli:main"
prompt-compiler-api = "prompt_compiler.api.app:main"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "tox",
]
dev = [
    "ruff",
    "pre-commit",
    "mypy",
    "myst-parser",
    "sphinx-copybutton",
    "furo",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prompt_compiler"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
ignore = []

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["tests"]
mypy_path = "src"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false
disallow_untyped_calls = false


[tool.pytest.ini_options]
addopts = "--cov=prompt_compiler --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
omit = [
    "src/prompt_compiler/cli.py",
    "src/prompt_compiler/api/app.py",
    "*__init__.py",
]

[tool.coverage.report]
fail_under = 85

[tool.uv.workspace]
members = [
    "3.13",
]
